добавлена смена темы и хедер приложения

--- a/src/App/style/main.css
+++ b/src/App/style/main.css
@@ -74,12 +74,13 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --purple: oklch(0.76 0.12 283.67);
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
+  --background: oklch(0.28 0.04 260.05);
   --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
+  --card: oklch(0.71 0.16 290.57);
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
@@ -108,6 +109,7 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+  --purple: oklch(0.76 0.12 283.67);
 }
 
 @layer base {
@@ -117,4 +119,9 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+body {
+  font-family:
+    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
