--- a/src/App/style/main.css
+++ b/src/App/style/main.css
@@ -75,6 +75,9 @@
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
   --purple: oklch(0.76 0.12 283.67);
+
+  --light-purple: #a5a5fa;
+  --milk-white: #f1f1f1;
 }
 
 .dark {
@@ -122,6 +125,5 @@
 }
 
 body {
-  font-family:
-    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
